[gd_scene load_steps=4 format=3 uid="uid://bs2y5eaj8st6p"]

[ext_resource type="Script" uid="uid://bet1h166tl7no" path="res://scripts/Main Menu/menu.gd" id="1_23fyw"]
[ext_resource type="PackedScene" uid="uid://coevmsl54ryoc" path="res://scenes/Main Menu/Level_Selection.tscn" id="2_xlwsp"]
[ext_resource type="Texture2D" uid="uid://k3qauhqk8gpq" path="res://assets/mainMenuButtons.png" id="3_xlwsp"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = 1.0
offset_right = -5.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_23fyw")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 0
offset_left = 5.0
offset_top = -1.0
offset_right = 326.0
offset_bottom = 180.0
texture = ExtResource("3_xlwsp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="CanvasLayer"]
visibility_layer = 0
offset_left = -1.0
offset_top = 16.0
offset_right = 114.0
offset_bottom = 66.0
rotation = -0.298595
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="CanvasLayer"]
visibility_layer = 0
anchors_preset = -1
anchor_left = 0.017
anchor_right = 0.017
offset_left = 14.56
offset_top = 71.0
offset_right = 95.56
offset_bottom = 102.0
rotation = -0.19963

[node name="Settings" type="Button" parent="CanvasLayer"]
visibility_layer = 0
offset_top = 107.0
offset_right = 97.0
offset_bottom = 138.0
rotation = -0.191131

[node name="Extra_Credits" type="Button" parent="CanvasLayer"]
visibility_layer = 0
offset_left = 25.0
offset_top = 134.0
offset_right = 118.0
offset_bottom = 167.0
rotation = -0.206861

[node name="Quit" type="Button" parent="CanvasLayer"]
visibility_layer = 0
offset_left = 1.0
offset_top = 167.0
offset_right = 38.0
offset_bottom = 180.0

[node name="LevelSelection" parent="CanvasLayer" instance=ExtResource("2_xlwsp")]
visibility_layer = 0

[connection signal="pressed" from="CanvasLayer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/Extra_Credits" to="." method="_on_extra_credits_pressed"]
[connection signal="pressed" from="CanvasLayer/Quit" to="." method="_on_quit_pressed"]
